<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tmp_activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.iel.swsapp.activity.LoginActivity">

    <EditText
        android:id="@+id/tmp_et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_marginTop="48dp"
        android:hint="@string/hint_input_username"
        />

    <EditText
        android:id="@+id/tmp_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/tmp_et_username"
        android:hint="@string/hint_input_password"/>
    <Button
        android:id="@+id/tmp_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_below="@+id/tmp_et_password"/>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:max="100"
        android:progress="20"
        android:id="@+id/progressBar2"
        android:progressDrawable="@drawable/bk_progressbar"
        android:layout_alignParentEnd="true"
        />

</RelativeLayout>
