<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/backgroudColor_lightGrey"
             tools:context="com.iel.swsapp.fragment.RealtimeEventFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical">
        <!--表头部分-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:background="@drawable/shape_table_head_left"
                >
                <TextView
                    android:id="@+id/tv_name_item_list_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_role_name"
                    android:layout_centerInParent="true"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"/>
                <ImageView
                    android:id="@+id/iv_divider_1"
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/divider_vertical_lighter_gray"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="2"
                android:background="@color/color_bk_table_head"
                >
                <TextView
                    android:id="@+id/tv_event_item_list_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/text_event"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"/>
                <ImageView
                    android:id="@+id/iv_divider_2"
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/divider_vertical_lighter_gray"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="2"
                android:background="@color/color_bk_table_head"
                >
                <TextView
                    android:id="@+id/tv_time_item_list_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/text_time"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"/>

            </RelativeLayout>

        </LinearLayout>
        <RelativeLayout
            android:id="@+id/rl_real_event_nodata_info"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:visibility="gone"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/info_no_datastoday"/>


        </RelativeLayout>

        <!--end 表头部分-->
        <in.srain.cube.views.ptr.PtrClassicFrameLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ptframe_history_event"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:ptr_duration_to_close="300"
            app:ptr_duration_to_close_header="2000"
            app:ptr_keep_header_when_refresh="true"
            app:ptr_pull_to_fresh="false"
            app:ptr_ratio_of_header_height_to_refresh="1.2"
            app:ptr_resistance="1.7">

            <com.iel.swsapp.view.MyLoadMoreListView
                android:id="@+id/lv_event_now"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"/>
        </in.srain.cube.views.ptr.PtrClassicFrameLayout>

    </LinearLayout>

        


</FrameLayout>
